--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,14 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(GLFW REQUIRED glfw3)
+pkg_check_modules(GLEW REQUIRED glew)
 
 find_package(OpenGL REQUIRED)
 
 set(SOURCES
     src/main.cpp
     src/PlatformLayer/platform_glfw.cpp
+    src/Input/input_glfw.cpp
 )
 
 add_executable(my_game ${SOURCES})
@@ -20,11 +22,13 @@ add_executable(my_game ${SOURCES})
 target_include_directories(my_game PRIVATE
     ${GLFW_INCLUDE_DIRS}
     src/PlatformLayer
+    src/Input
 )
 
 # Link libraries
 target_link_libraries(my_game PRIVATE
     ${GLFW_LIBRARIES}
+    ${GLEW_LIBRARIES}
     OpenGL::GL
 )
 
